argocd/manifests/prod/apps/hiker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hiker
  namespace: hiker
  labels:
    app.kubernetes.io/name: hiker
  annotations:
    argocd.argoproj.io/sync-wave: "10"
    external-dns.alpha.kubernetes.io/ttl: "300"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: hiker.pengiuns.com
spec:
  type: ExternalName
  externalName: d65bf19e-11ed-4df3-81c1-b76923b14de4.cfargotunnel.com
  selector:
    app: hiker
  # type: ClusterIP
  # type: LoadBalancer
  # loadBalancerIP: 192.168.178.200 # fixed IP for cloudflare to reach it (also handy for debugging)
  # ports:
  # - name: http
  #   port: 80 # we talk to 80
  #   protocol: TCP
  #   targetPort: 8080 # app listens here
