argocd/manifests/prod/apps/hiker/ingress-route.yaml
# Use instead of Ingress
# Each app requires one like this if I want to use Auth
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hiker
  namespace: hiker
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hiker.pengiuns.com`)
      kind: Rule
      middlewares:
        - name: tinyauth
      services:
        - name: whoami
          port: 80
  tls:
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production


# Step-by-step flow:
# Browser → HTTPS request → Cloudflare Tunnel → Traefik entrypoint websecure
# Traefik checks IngressRoute rules:
# Host matches hiker.pengiuns.com? ✅
# Traefik applies middleware:
# ForwardAuth → TinyAuth internal check
# If allowed → Traefik forwards to service hiker port 80
# TLS termination happens at Traefik (from secret) → encrypted traffic ends at Traefik
