argocd/manifests/prod/apps/hiker/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: hiker
#   labels:
#     app: hiker
#     app.kubernetes.io/name: hiker
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/limit-rpm: "3600"
#     # See README.md
#     nginx.ingress.kubernetes.io/ssl-redirect: "false" # do not redirect HTTP to HTTPS
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTP" # not it expects HTTP from cloudflare
#     nginx.ingress.kubernetes.io/proxy-redirect-from: "http://" # telling how to redirect
#     nginx.ingress.kubernetes.io/proxy-redirect-to: "https://"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: swisshikefinder.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: hiker
#             port:
#               number: 80 # or 443
#   tls:
#   - hosts:
#       - swisshikefinder.com
#     secretName: letsencrypt-swisshikefinder-com
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hiker
  namespace: hiker
  labels:
    app.kubernetes.io/name: hiker
  annotations:
    kubernetes.io/ingress.class: "traefik" # TODO: Review annots
    argocd.argoproj.io/sync-wave: "10"
spec:
  ingressClassName: traefik
  rules:
    - host: hiker.pengiuns.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: hiker
                port:
                  number: 80
  tls:
    - hosts:
        - hiker.pengiuns.com
      secretName: letsencrypt-wildcard-cert-pengiuns.com-production
